<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!-- The Basics -->
  <groupId>org.lieuofs</groupId>
  <artifactId>lieuofs</artifactId>
  <version>2.0.0</version>
  <packaging>jar</packaging>
  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.5.20</version>
    </dependency>
    <dependency>
      <groupId>org.freemarker</groupId>
      <artifactId>freemarker</artifactId>
      <version>2.3.34</version>
      <scope>compile</scope>
    </dependency>
  </dependencies>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <junit.jupiter.version>6.0.0</junit.jupiter.version>
    <assertj.version>3.27.6</assertj.version>
    <slf4j.version>2.0.17</slf4j.version>
  </properties>


  <!-- Build Settings -->
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.1</version>
        <configuration>
          <release>25</release>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.12.0</version>
        <configuration>
          <show>package</show>
          <charset>${project.build.sourceEncoding}</charset>
          <docfilessubdirs>true</docfilessubdirs>
          <excludedocfilessubdir>CVS</excludedocfilessubdir>
          <links>
            <!-- JSE -->
            <link>http://java.sun.com/javase/6/docs/api/</link>
            <!-- Libraries -->
            <link>http://www.junit.org/junit/javadoc/</link>
            <link>http://logging.apache.org/log4j/docs/api/</link>
          </links>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-report-plugin</artifactId>
        <version>3.5.4</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>3.28.0</version>
        <configuration>
          <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
          <minimumTokens>100</minimumTokens>
          <targetJdk>${compileSource}</targetJdk>
        </configuration>
      </plugin>
    </plugins>
  </reporting>

  <!-- More Project Information -->
  <name>lieuofs</name>
  <url>https://github.com/pgiroud/lieuofs/wiki</url>
  <licenses>
    <license>
      <name>GNU General Public License (GPL)</name>
      <url>http://www.gnu.org/licenses/gpl.txt</url>
    </license>
  </licenses>

  <!-- Environment Settings -->
  <scm>
    <connection>scm:git:git@github.com:pgiroud/lieuofs.git</connection>
    <url>scm:git:git@github.com:pgiroud/lieuofs.git</url>
    <developerConnection>scm:git:git@github.com:pgiroud/lieuofs.git</developerConnection>
  </scm>

</project>
